assign subjects\groups to teacher, fix is_admin set